feat: add slider block

--- a/singolo1.html
+++ b/singolo1.html
@@ -20,5 +20,11 @@
 	    </ul>
 	  </nav>
 	</div>
+	<div class="slider">
+      <a href="singolo1.html#"><img class="img-left" src="assets/img/chev.png" alt="left button"></a>
+      <img class="iPhone-vertical" src="assets/img/iPhone Vertical.png" alt="iPhone Vertical">
+      <img class="iPhone-horizontal" src="assets/img/iPhone Horizontal.png" alt="iPhone Horizontal">
+      <a href="singolo1.html#"><img class="img-right" src="assets/img/chev.png" alt="right button"></a>
+	</div>
   </body>
 </html>
