feat: add footer

--- a/singolo1.html
+++ b/singolo1.html
@@ -26,5 +26,41 @@
       <img class="iPhone-horizontal" src="assets/img/iPhone Horizontal.png" alt="iPhone Horizontal">
       <a href="singolo1.html#"><img class="img-right" src="assets/img/chev.png" alt="right button"></a>
 	</div>
+    <div class="services">
+      <div class="our-services box">
+        <h2>Our Services</h2>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+      </div>
+      <div class="custom-design box">
+        <img src="assets/img/pen.svg">
+        <h3>Custom Design</h3>
+        <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+      </div>
+      <div class="inovative-ideas box">
+        <img src="assets/img/bulb.svg">
+        <h3>Inovative Ideas</h3>
+        <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec retrum tellus dolor id lorem.</p>
+      </div>
+      <div class="love-answer box">
+        <img src="assets/img/heart.svg">
+        <h3>Love Is The Answer</h3>
+        <p>Nulla sed nunc et tortor luctusfaucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+      </div>
+      <div class="responsive-layout box">
+        <img src="assets/img/phone.svg">
+        <h3>Responsive Layout</h3>
+        <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+      </div>
+      <div class="support box">
+        <img src="assets/img/bubble.svg">
+        <h3>24/7 Support</h3>
+        <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatus lorem.</p>
+      </div>
+      <div class="feel-like box">
+        <img src="assets/img/star.svg">
+        <h3>Feel Like A Star</h3>
+        <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+      </div>
+    </div>
   </body>
 </html>
