--- a/singolo2.html
+++ b/singolo2.html
@@ -6,6 +6,27 @@
     <title>Singolo. Part 2</title>
   </head>
   <body>
-    
+    <div class="portfolio">
+	  <h2>Portfolio</h2>
+	  <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+	  <span class="link-border"><a href="#" class="catalog">All</a></span>
+	  <span class="link-border"><a href="#" class="catalog">Web Design</a></span>
+	  <span class="link-border"><a href="#" class="catalog">Graphic Design</a></span>
+	  <span class="link-border"><a href="#" class="catalog">Artwork</a></span>
+	  <div class="images">
+        <div class="box01"></div>
+        <div class="box02"></div>
+        <div class="box03"></div>
+        <div class="box04"></div>
+        <div class="box05"></div>
+        <div class="box06"></div>
+        <div class="box07"></div>
+        <div class="box08"></div>
+        <div class="box09"></div>
+        <div class="box10"></div>
+        <div class="box11"></div>
+        <div class="box12"></div>
+      </div>
+	</div>
   </body>
 </html>
