feat: implement about us block

--- a/singolo2.html
+++ b/singolo2.html
@@ -28,5 +28,38 @@
         <div class="box12"></div>
       </div>
 	</div>
+	<div class="about">
+	  <h2>About Us</h2>
+	  <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+	  <div class="profile">
+        <div class="profile01">
+		  <img src="assets/img/photo01.png" height="300" width="300">
+		  <h3>Adam Jensen</h3>
+		  <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/facebook.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/google.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/twitter.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/linkedin.png"></a></span>
+		</div>
+        <div class="profile02">
+		  <img src="assets/img/photo02.png" height="300" width="300">
+		  <h3>Desmond Miles</h3>
+		  <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/facebook.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/google.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/twitter.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/linkedin.png"></a></span>
+		</div>
+        <div class="profile03">
+		  <img src="assets/img/photo03.png" height="300" width="300">
+		  <h3>Scolara Visari</h3>
+		  <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/facebook.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/google.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/twitter.png"></a></span>
+		  <span class="circle"><a href="#"><img class="img" src="assets/img/linkedin.png"></a></span>
+		</div>
+      </div>
+	</div>
   </body>
 </html>
