feat: implement get a quote block

--- a/singolo3.html
+++ b/singolo3.html
@@ -2,15 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-	<link href="singolo2.css" rel="stylesheet">
-    <title>Singolo. Part 2</title>
+	<link href="singolo3.css" rel="stylesheet">
+    <title>Singolo. Part 3</title>
   </head>
   <body>
     <div class="get-a-quote">
-	  
+	  <h2>Get a Quote</h2>
+	  <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+	  <div class="block">
+	    <div class="form">
+	      <form action="index.html">
+            <label><input type="text" name="name" placeholder="Name (Required)" required></label>
+		    <label><input type="email" name="email" placeholder="Email (Required)" required></label>
+		    <label><input type="text" name="subject" placeholder="Subject"></label>
+		    <label><textarea name="describe" placeholder="Describe your project in detail..."></textarea></label>
+          </form>
+	    </div>
+	    <div class="contact-info">
+	      <h3>Contact Information</h3>
+		  <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.</p>
+		  <div class="location">Elm St. 14/05 Lost City</div>
+		  <div class="phone"><a href="tel:035283318635">03528 331 86 35</a></div>
+		  <div class="mail"><a href="email:info@singolo.com">info@singolo.com</a></div>
+	    </div>
+	  </div>
 	</div>
 	<footer>
-	  
+	
 	</footer>
   </body>
 </html>
