feat: implement footer

--- a/singolo3.html
+++ b/singolo3.html
@@ -28,7 +28,13 @@
 	  </div>
 	</div>
 	<footer>
-	
-	</footer>
+	  <span class="copyright">© Copyright 2013</span>
+	  <div class="soc">
+  	    <span class="circle"><a href="#"><img class="img" src="assets/img/facebook.png"></a></span>
+        <span class="circle"><a href="#"><img class="img" src="assets/img/google.png"></a></span>
+        <span class="circle"><a href="#"><img class="img" src="assets/img/twitter.png"></a></span>
+        <span class="circle"><a href="#"><img class="img" src="assets/img/linkedin.png"></a></span>
+      </div>
+    </footer>
   </body>
 </html>
