--- a/singolo3.html
+++ b/singolo3.html
@@ -16,7 +16,7 @@
 		    <label><input type="email" name="email" placeholder="Email (Required)" required></label>
 		    <label><input type="text" name="subject" placeholder="Subject"></label>
 		    <label><textarea name="describe" placeholder="Describe your project in detail..."></textarea></label>
-			<br><br><button>Submit</button
+			<br><br><button>Submit</button>
           </form>
 	    </div>
 	    <div class="contact-info">
